[package]
name = "mqtt-storage"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rocksdb = { version = "0.15.0", optional = true }
sled = "0.34.6"
bytes = "0.6.0"
tokio = {version = "0.3.3", features = ["full"]}
rand = "0.7.3"
dashmap = "3.11.10"
structopt = "0.3.20"
anyhow = "1.0.34"
prettytable-rs = "0.8.0"
indicatif = "0.15.0"
futures = "0.3.8"
queue-file = "1.1.0"

[[bench]]
name = "rocksdb"
# required-features=["rocksdb"]
harness = false

[[bench]]
name = "sled"
# required-features=["sled"]
harness = false

[[bench]]
name = "memory"
harness = false

[dev-dependencies]
criterion = "0.3.2"
tempfile = "3.1.0"

[features]
default = ["rocksdb"]
